tests/baselines/reference/relationalOperatorComparable.errors.txt
tests/cases/compiler/relationalOperatorComparable.ts(5,14): error TS2365: Operator '<' cannot be applied to types '数字' and '真假'.
tests/cases/compiler/relationalOperatorComparable.ts(6,14): error TS2365: Operator '<=' cannot be applied to types '数字' and '真假'.
tests/cases/compiler/relationalOperatorComparable.ts(7,14): error TS2365: Operator '>=' cannot be applied to types '数字' and '真假'.
tests/cases/compiler/relationalOperatorComparable.ts(8,14): error TS2365: Operator '>' cannot be applied to types '数字' and '真假'.
tests/cases/compiler/relationalOperatorComparable.ts(9,14): error TS2365: Operator '<' cannot be applied to types '真假' and '数字'.
tests/cases/compiler/relationalOperatorComparable.ts(10,14): error TS2365: Operator '<' cannot be applied to types '真假' and '数字'.
tests/cases/compiler/relationalOperatorComparable.ts(11,14): error TS2365: Operator '<' cannot be applied to types '文字' and '数字'.


==== tests/cases/compiler/relationalOperatorComparable.ts (7 errors) ====
    function f(onethree: 1 | 3, two: 2) {
        const t = true;
        const f = false;
        let a1 = onethree < two; // ok
        let a2 = onethree < true; // error, number and boolean
                 ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '数字' and '真假'.
        let a3 = onethree <= false; // error, number and boolean
                 ~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '数字' and '真假'.
        let a4 = onethree >= t; // error, number and boolean
                 ~~~~~~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '数字' and '真假'.
        let a5 = onethree > f; // error, number and boolean
                 ~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '数字' and '真假'.
        let a6 = true < onethree; // error, boolean and number
                 ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '真假' and '数字'.
        let a7 = false < two; // error, boolean and number
                 ~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '真假' and '数字'.
        let a8 = 'foo' < onethree; // error, string and number
                 ~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '文字' and '数字'.
        let a9 = onethree < 1; // ok
        let a10 = 1 < two; // ok
        let a11 = 2 < 1; // ok
    }
    